ingress/nginx.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: nginx
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /frontend
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8080
          - path: /nginx
            pathType: Prefix
            backend:
              service:
                name: clusture-ip-service
                port:
                  number: 80
